# simple-manga-downloader

./: .gitignore  CHANGELOG.md  Makefile  Pipfile  README.md  SMD.py  USAGE.md  config_parser.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: pythonpublish.yml
modules/: config_parser.py  mangadex_org.py  mangaseeonline_us.py
simple_manga_downloader/: SMD.py  __init__.py  arg_parser.py  config_parser.py  decorators.py  models.py  utils.py
simple_manga_downloader/modules/: __init__.py  config_parser.py  heavenmanga_org.py  manga.py  mangadex_org.py  mangakakalot_com.py  manganato_com.py  manganelo_com.py  mangaseeonline_us.py  mangatown_com.py
template/: module_template.py
