[metadata]
name = simple-manga-downloader
version = attr: simple_manga_downloader.__version__
author = Kanjirito
author_email = kanjirito@protonmail.com
license = GPLv3
url = https://github.com/Kanjirito/simple-manga-downloader
project_urls = 
	Bug Tracker = https://github.com/Kanjirito/simple-manga-downloader/issues
	Use Guide = https://github.com/Kanjirito/simple-manga-downloader/blob/master/USAGE.md
	Changelog = https://github.com/Kanjirito/simple-manga-downloader/blob/master/CHANGELOG.md
description = Simple manga console downloader
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Environment :: Console
keywords = 
	manga
	downloader

[options]
packages = find:
install_requires =
	requests~=2.23
	beautifulsoup4~=4.9
python_requires = >=3.6

[options.entry_points]
console_scripts =
	SMD=simple_manga_downloader.SMD:main

[flake8]
extend-exclude =
	.venv/
	template/

max-line-length = 88
max-doc-length = 88
select = 
	# E, F, W are default flake8 errors
	E,
	F,
	W,
	# flake8-comprehensions
	C,
	# pep8-naming
	N,
	# flake8-simplify
	SIM,
	# flake8-bugbear
	B,
	# B903, B901 are optional bugbear errors
	B903,
	B901,

extend-ignore =
	E203,
	# E501 (Line too long)
	# Ignored because black will handle line length and it helps avoiding awkward string breaks
	E501,
	# SIM105 (Use 'contextlib.suppress(...)' instead of try-except-pass)
	SIM105,
	# SIM108 (Use the ternary operator if it's reasonable)
	SIM108,
	# E722 (Do not use bare except)
	# Ignored in favour of the flake8-bugbear error which explains the problem better
	E722,
